@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:description="http://www.eclipse.org/sirius/description/1.1.0" xmlns:description_1="http://www.eclipse.org/sirius/diagram/description/1.1.0" xmlns:diagram="http://www.eclipse.org/sirius/diagram/1.1.0" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:notation="http://www.eclipse.org/gmf/runtime/1.0.3/notation" xmlns:style="http://www.eclipse.org/sirius/diagram/description/style/1.1.0" xmlns:viewpoint="http://www.eclipse.org/sirius/1.1.0" xsi:schemaLocation="http://www.eclipse.org/sirius/description/1.1.0 http://www.eclipse.org/sirius/1.1.0#//description http://www.eclipse.org/sirius/diagram/description/1.1.0 http://www.eclipse.org/sirius/diagram/1.1.0#//description http://www.eclipse.org/sirius/diagram/description/style/1.1.0 http://www.eclipse.org/sirius/diagram/1.1.0#//description/style">
-  <viewpoint:DAnalysis uid="_xTiJkFo3EeuqXtYsuyu_5A" selectedViews="_H0aysDJnEeyi1effkd5_mA" version="14.5.1.202106111100">
+  <viewpoint:DAnalysis uid="_xTiJkFo3EeuqXtYsuyu_5A" selectedViews="_H0aysDJnEeyi1effkd5_mA" version="14.6.0.202109231100">
     <semanticResources>setChangeId.ecore</semanticResources>
     <ownedViews xmi:type="viewpoint:DView" uid="_RzU1sFo4EeuqXtYsuyu_5A">
       <viewpoint xmi:type="description:Viewpoint" href="platform:/resource/test-ecore.design/description/ecore.odesign#//@ownedViewpoints[name='Design']"/>
